<resources>
    <string name="app_name">BookChooser</string>
    <string name="title_activity_view_data">ViewDataActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_data_view">DataViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="view_all">View All</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="select_book">Select Book</string>
    <string name="save">Save</string>
    <string name="textview">TextView</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <array name="books">
        <item name="bookA">BookA</item>
        <item name="bookB">BookB</item>
        <item name="bookC">BookC</item>
    </array>
</resources>